[gd_scene load_steps=6 format=3 uid="uid://dg8hqsm1ige48"]

[ext_resource type="Script" uid="uid://duxcr5kolqmw7" path="res://Scenes/UI/stats_ui.gd" id="1_0l5yy"]
[ext_resource type="Texture2D" uid="uid://dif2c23bius7s" path="res://Art/UI/Icons/fb664.png" id="1_i5px6"]
[ext_resource type="Theme" uid="uid://i2qtan1kjruu" path="res://Themes/main_theme.tres" id="2_0l5yy"]
[ext_resource type="Texture2D" uid="uid://8o7oopy1bs0r" path="res://Art/UI/Icons/fb659.png" id="3_05r6v"]
[ext_resource type="Texture2D" uid="uid://dsxoucqwbkdiw" path="res://Art/UI/Icons/fb447.png" id="4_gnyk0"]

[node name="StatsUI" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_right = 93.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("1_0l5yy")

[node name="Block" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7

[node name="BlockIcon" type="TextureRect" parent="Block"]
layout_mode = 2
texture = ExtResource("1_i5px6")
stretch_mode = 5

[node name="BlockLabel" type="Label" parent="Block"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_0l5yy")
theme_override_font_sizes/font_size = 18
text = "6"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7

[node name="HealthIcon" type="TextureRect" parent="Health"]
layout_mode = 2
texture = ExtResource("3_05r6v")
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_0l5yy")
theme_override_font_sizes/font_size = 18
text = "6"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Lust" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7

[node name="LustIcon" type="TextureRect" parent="Lust"]
layout_mode = 2
texture = ExtResource("4_gnyk0")
stretch_mode = 5

[node name="LustLabel" type="Label" parent="Lust"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_0l5yy")
theme_override_font_sizes/font_size = 18
text = "6"
horizontal_alignment = 1
vertical_alignment = 2
